Some styling tweaks

--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "react-scripts": "1.0.11",
     "typeface-roboto": "0.0.35"
   },
+  "homepage": "http://codepb.github.io/starfinder-character-sheet",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
   }
 }
