--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.11",
+    "redux-localstorage": "^1.0.0-rc5",
     "typeface-roboto": "0.0.35"
   },
   "homepage": "http://codepb.github.io/starfinder-character-sheet",
