--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-    "name": "starfinder-character-sheet",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "eslint": "^4.3.0",
-        "immutability-helper": "^2.3.1",
-        "material-ui": "^1.0.0-beta.6",
-        "react": "^15.6.1",
-        "react-dom": "^15.6.1",
-        "react-redux": "^5.0.6",
-        "react-scripts": "^1.0.11",
-        "redux": "^3.7.2",
-        "redux-localstorage": "^1.0.0-rc5",
-        "redux-multi": "^0.1.12",
-        "redux-thunk": "^2.2.0",
-        "typeface-roboto": "0.0.35"
-    },
-    "homepage": "http://codepb.github.io/starfinder-character-sheet",
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
-    },
-    "devDependencies": {
-        "gh-pages": "^1.0.0"
-    }
+  "name": "starfinder-character-sheet",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "eslint": "^4.3.0",
+    "immutability-helper": "^2.3.1",
+    "material-ui": "^1.0.0-beta.6",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "react-scripts": "^1.0.11",
+    "redux": "^3.7.2",
+    "redux-localstorage": "^1.0.0-rc5",
+    "redux-multi": "^0.1.12",
+    "redux-thunk": "^2.2.0",
+    "typeface-roboto": "0.0.35",
+    "uuid": "^3.1.0"
+  },
+  "homepage": "http://codepb.github.io/starfinder-character-sheet",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
+  }
 }
