--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "^1.15.3",
     "react": "^16.7.0-alpha.2",
     "react-dom": "^16.7.0-alpha.2",
+    "react-jss": "8.6.1",
     "react-scripts": "2.1.1",
     "typescript": "^3.2.1"
   },
