--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^10.12.11",
     "@types/react": "^16.7.11",
     "@types/react-dom": "^16.0.11",
+    "classnames": "2.2.6",
     "material-ui": "^0.20.2",
     "prettier": "^1.15.3",
     "react": "^16.7.0-alpha.2",
