--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^23.3.10",
-    "@types/node": "^10.12.11",
-    "@types/react": "^16.7.11",
-    "@types/react-dom": "^16.0.11",
+    "@material-ui/core": "3.9.3",
+    "@material-ui/icons": "3.0.2",
+    "@types/jest": "23.3.10",
+    "@types/node": "10.12.11",
+    "@types/react": "16.8.14",
+    "@types/react-dom": "16.8.4",
     "classnames": "2.2.6",
-    "material-ui": "^0.20.2",
-    "prettier": "^1.15.3",
-    "react": "^16.7.0-alpha.2",
-    "react-dom": "^16.7.0-alpha.2",
+    "prettier": "1.15.3",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-jss": "8.6.1",
     "react-scripts": "2.1.1",
-    "typescript": "^3.2.1"
+    "typeface-roboto": "0.0.54",
+    "typescript": "3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
