--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "dependencies": {
     "@material-ui/core": "3.9.3",
     "@material-ui/icons": "3.0.2",
+    "@types/file-saver": "^2.0.0",
     "@types/jest": "23.3.10",
+    "@types/lz-string": "^1.3.33",
     "@types/node": "10.12.11",
     "@types/react": "16.8.14",
     "@types/react-dom": "16.8.4",
     "classnames": "2.2.6",
+    "file-saver": "^2.0.2",
+    "lz-string": "^1.4.4",
     "prettier": "1.15.3",
     "react": "16.8.6",
     "react-dom": "16.8.6",
